tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__AMagicalBox-AAAAAAAAAAAAAAAAAAAH5A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2020,
  "prerequisites": [
    266
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This magical box is amazing. No matter how many are created, they all seem to connect to the same dimension. I can store items in one location, and pull them out somewhere else!\n\nI can use dyes on the top of the box to assign its location, and any box with the same colors will share the same space. Using a diamond on the box locks it to me, and me alone.\n\nShift-right-clicking will remove the diamond and the chest will rejoin the public network.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Magical Box",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    266
  ],
  "rewards": [],
  "tasks": []
}
