tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__AMagicalTank-AAAAAAAAAAAAAAAAAAAH5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2021,
  "prerequisites": [
    266
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This tank always seems to connect to the same dimensional space. I can push fluids into the tank in one dimension, and retrieve them in a totally different dimension!\n\nI have discovered a way to assign a location to each tank using dyes applied to the top. Using a diamond makes the tank private, attuned to the user's mind, and will not share fluids with any other player's tanks.\n\nShift-right-clicking recovers the diamond and makes the tank part of the public tank network again.\n\nThe dial on front controls the input/output of the tank. When blue is up, the tank accepts fluids. When orange is up, the tank will eject fluids.\n\n§3If you get FPS problems from large numbers of them, try the setting in the config to turn off the fancy render at the bottom.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Magical Tank",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    266
  ],
  "rewards": [],
  "tasks": []
}
