tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__ATravelCompanion-AAAAAAAAAAAAAAAAAAAI2w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2267,
  "prerequisites": [
    292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lonely? The Traveling Trunk is a simple companion, giving you some extra space. With upgrades (one per trunk) it can offer you some nice advantages. Like other golems, you can pick it up with the Golemancer's Bell. Its brain is pretty small though, so it can easily get stuck. You can order it to stay in one spot via the GUI. It will attempt to teleport to you, as long as the chunk is still loaded. It can also follow you into different dimensions.\n\nThey will heal slowly on their own, or faster if you right-click on them with any food, including rotten meat. Keep away from lava.\n\nGolem upgrade effects:\nAer: Moves faster\nEarth: 1 more row of item slots\nFire: Attacks hostile mobs, setting them on fire\nWater: Nearly invulnerable. In SMP, can only be opened or picked up by player who placed it.\nEntropy: Sucks in loose items nearby if it has room\nOrder: Can be picked up with its contents, and nested in other inventories. Don't be stupid about this.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Travel Companion",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    292
  ],
  "rewards": [],
  "tasks": []
}
