tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAABBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 260,
  "prerequisites": [
    252
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I have mastered the basics. Master warned me about forbidden magic, but it sounds so promising. I think a bit of the forbidden can't hurt...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Adept Thaumaturgy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    252
  ],
  "rewards": [],
  "tasks": []
}
