tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__AnAwesomeMagicCo-AAAAAAAAAAAAAAAAAAABBQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 261,
  "prerequisites": [
    263
  ],
  "properties": {
    "auto_claim": false,
    "desc": "More... I want MOOORE! There must be something even stronger than the hydra. Something older, more ancient.\n\nThese tears, WOW! I've never felt something so strong. Could it be? Could I make an even more powerful wand with these?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "An Awesome Magic Conductor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    263
  ],
  "rewards": [],
  "tasks": []
}
